--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -24,10 +24,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Inventory Maneger</title>
+    <title>Pinvent App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="loader"></div>
     <div id="root"></div>
     <!--
       This HTML file is a template.
